fix env loads